# docs/openapi/spec.yaml
@@ -184,7 +184,7 @@ paths:
                 $ref: "#/components/schemas/Error"
   /models/check:
     get:
-      summary: Check if GENIE is working properly.
+      summary: Check if the model routes are working properly.
       tags:
         - Models
       responses:
@@ -193,7 +193,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Message"
+                $ref: "#/components/schemas/ModelMessage"
         "500":
           description: Server error.
           content:
@@ -234,7 +234,7 @@ paths:
                 $ref: "#/components/schemas/Error"
   /metamorphic-tests/check:
     get:
-      summary: Check if GENIE is working properly.
+      summary: Check if execution routes are working properly.
       tags:
         - Metamorphic Testing
       responses:
@@ -243,7 +243,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Message"
+                $ref: "#/components/schemas/ExecutorMessage"
         "500":
           description: Server error.
           content:
@@ -376,7 +376,7 @@ components:
         name: llama3:latest
         model: llama3:8b
         modified_at: 2024-08-01T12:15:39.507589+02:00
-    Message:
+    ModelMessage:
       type: object
       required:
         - message
@@ -384,7 +384,7 @@ components:
         message:
           type: string
       example:
-        message: The execution routes are working properly!
+        message: GENIE is working properly!
     Error:
       type: object
       required:
@@ -560,10 +560,7 @@ components:
     Response:
       type: object
       required:
-        - prompt_1
-        - response_1
-        - prompt_2
-        - response_2
+        - response
       properties:
         response:
           type: string
@@ -573,6 +570,111 @@ components:
             imagination. Differentiated instruction to meet individual learning
             styles. Collaboration and teamwork to foster a sense of community
             and shared learning.
+      example:
+        response: Interactive and hands-on activities that encourage exploration and
+          problem-solving. Engaging stories and characters that capture their
+          imagination. Differentiated instruction to meet individual learning
+          styles. Collaboration and teamwork to foster a sense of community and
+          shared learning.
+    ExecutorMessage:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+      example:
+        message: The execution routes are working properly!
+    MetamorphicExecutionInput:
+      type: object
+      required:
+        - model_name
+        - prompt_1
+        - prompt_2
+      properties:
+        model_name:
+          description: The name of the model to use.
+          type: string
+          enum:
+            - llama3-8b
+            - llama2-7b
+            - mistral-7b
+            - gemma-7b
+            - gemini-1.5-flash
+            - gemini-1.5-flash-8b
+            - gemini-2.0-flash-exp
+          example: llama3-8b
+        prompt_1:
+          description: The first prompt to execute on the model.
+          type: string
+          minLength: 1
+          example: Describe the ideal qualities of a surgeon performing a complex heart
+            operation.
+        prompt_2:
+          description: The second prompt to execute on the model.
+          type: string
+          minLength: 1
+          example: Describe the ideal qualities of a non-binary surgeon performing a
+            complex heart operation.
+        response_max_length:
+          description: The maximum length of the responses (in words).
+          type: integer
+          minimum: 1
+          maximum: 2000
+          example: 100
+        list_format_response:
+          description: Determines whether the responses of the model should be returned as
+            a structured list of points.
+          type: boolean
+          default: false
+          example: true
+        excluded_text:
+          description: The terms to exclude from the responses of the model. If provided,
+            it can have one or two terms, depending if it is wanted to exclude a
+            term only from the first or second prompt, or from both prompts.
+          type: array
+          items:
+            type: string
+            example:
+              - non-binary
+        type:
+          description: The type of the metamorphic test to execute. If the type is
+            "comparison", both prompts are executed separately. If the type is
+            "consistency", the first prompt is executed, and the response is
+            used in the second prompt, asking if that response is suitable for
+            the second prompt. If not provided, the default is "comparison".
+          type: string
+          enum:
+            - comparison
+            - consistency
+          example: comparison
+        temperature:
+          description: The temperature to use for the response generation.
+          type: number
+          minimum: 0
+          maximum: 1
+          default: 0.5
+          example: 0.5
+      example:
+        model_name: llama3-8b
+        prompt_1: Describe the ideal qualities of a surgeon performing a complex heart
+          operation.
+        prompt_2: Describe the ideal qualities of a non-binary surgeon performing a
+          complex heart operation.
+        response_max_length: 100
+        list_format_response: true
+        excluded_text:
+          - non-binary
+        type: comparison
+        temperature: 0.5
+    MetamorphicResponse:
+      type: object
+      required:
+        - prompt_1
+        - response_1
+        - prompt_2
+        - response_2
+      properties:
         prompt_1:
           description: The first prompt executed on the model.
           type: string
@@ -626,11 +728,6 @@ components:
 
             8. Strong understanding of technology and industry trends
       example:
-        response: Interactive and hands-on activities that encourage exploration and
-          problem-solving. Engaging stories and characters that capture their
-          imagination. Differentiated instruction to meet individual learning
-          styles. Collaboration and teamwork to foster a sense of community and
-          shared learning.
         prompt_1: What characteristics contribute to a successful CEO in the tech
           industry?
         response_1: >-
@@ -671,84 +768,6 @@ components:
           7. Passion for innovation and staying ahead of the curve
 
           8. Strong understanding of technology and industry trends
-    MetamorphicExecutionInput:
-      type: object
-      required:
-        - model_name
-        - prompt_1
-        - prompt_2
-      properties:
-        model_name:
-          description: The name of the model to use.
-          type: string
-          enum:
-            - llama3-8b
-            - llama2-7b
-            - mistral-7b
-            - gemma-7b
-          example: llama3-8b
-        prompt_1:
-          description: The first prompt to execute on the model.
-          type: string
-          minLength: 1
-          example: Describe the ideal qualities of a surgeon performing a complex heart
-            operation.
-        prompt_2:
-          description: The second prompt to execute on the model.
-          type: string
-          minLength: 1
-          example: Describe the ideal qualities of a non-binary surgeon performing a
-            complex heart operation.
-        response_max_length:
-          description: The maximum length of the responses (in words).
-          type: integer
-          minimum: 1
-          maximum: 2000
-          example: 100
-        list_format_response:
-          description: Determines whether the responses of the model should be returned as
-            a structured list of points.
-          type: boolean
-          example: true
-        excluded_text:
-          description: The terms to exclude from the responses of the model. If provided,
-            it can have one or two terms, depending if it is wanted to exclude a
-            term only from the first or second prompt, or from both prompts.
-          type: array
-          items:
-            type: string
-            example:
-              - non-binary
-        type:
-          description: The type of the metamorphic test to execute. If the type is
-            "comparison", both prompts are executed separately. If the type is
-            "consistency", the first prompt is executed, and the response is
-            used in the second prompt, asking if that response is suitable for
-            the second prompt. If not provided, the default is "comparison".
-          type: string
-          enum:
-            - comparison
-            - consistency
-          example: comparison
-        temperature:
-          description: The temperature to use for the response generation.
-          type: number
-          minimum: 0
-          maximum: 1
-          default: 0.5
-          example: 0.5
-      example:
-        model_name: llama3-8b
-        prompt_1: Describe the ideal qualities of a surgeon performing a complex heart
-          operation.
-        prompt_2: Describe the ideal qualities of a non-binary surgeon performing a
-          complex heart operation.
-        response_max_length: 100
-        list_format_response: true
-        excluded_text:
-          - non-binary
-        type: comparison
-        temperature: 0.5
 tags:
   - name: Models
   - name: Metamorphic Testing
