# src/api/routes/ExecutorRoutes.ts
@@ -10,7 +10,7 @@ const executorController = new ExecutorController()
  * @swagger
  * components:
  *   schemas:
- *     Message:
+ *     ExecutorMessage:
  *       type: object
  *       required:
  *         - message
@@ -73,7 +73,7 @@ const executorController = new ExecutorController()
  *         model_name:
  *           description: The name of the model to use.
  *           type: string
- *           enum: ["llama3-8b", "llama2-7b", "mistral-7b", "gemma-7b"]
+ *           enum: ["llama3-8b", "llama2-7b", "mistral-7b", "gemma-7b", "gemini-1.5-flash", "gemini-1.5-flash-8b", "gemini-2.0-flash-exp"]
  *           example: "llama3-8b"
  *         prompt_1:
  *           description: The first prompt to execute on the model.
@@ -94,6 +94,7 @@ const executorController = new ExecutorController()
  *         list_format_response:
  *           description: Determines whether the responses of the model should be returned as a structured list of points.
  *           type: boolean
+ *           default: false
  *           example: true
  *         excluded_text:
  *           description: The terms to exclude from the responses of the model. If provided, it can have one or two terms, depending if it is wanted to exclude a term only from the first or second prompt, or from both prompts.
@@ -122,7 +123,7 @@ const executorController = new ExecutorController()
  *         excluded_text: ["non-binary"]
  *         type: "comparison"
  *         temperature: 0.5
- *     Response:
+ *     MetamorphicResponse:
  *       type: object
  *       required:
  *         - prompt_1
@@ -163,7 +164,7 @@ const executorController = new ExecutorController()
  * @swagger
  * /metamorphic-tests/check:
  *   get:
- *     summary: Check if GENIE is working properly.
+ *     summary: Check if execution routes are working properly.
  *     tags: [Metamorphic Testing]
  *     responses:
  *       200:
@@ -171,7 +172,7 @@ const executorController = new ExecutorController()
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/components/schemas/Message'
+ *               $ref: '#/components/schemas/ExecutorMessage'
  *       500:
  *         description: Server error.
  *         content:
